完成了DP/value-iteration

--- a/DP/Value Iteration.ipynb
+++ b/DP/Value Iteration.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -18,10 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pp = pprint.PrettyPrinter(indent=2)\n",
@@ -30,9 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -52,9 +48,67 @@
     "        A tuple (policy, V) of the optimal policy and the optimal value function.        \n",
     "    \"\"\"\n",
     "    \n",
+    "    \n",
+    "    \n",
+    "    def value_DP_iteration(V, env, T, reward_type = \"gamma_discount\", gamma = 1.0):\n",
+    "        print(\"----- T = {} ------\".format(T))\n",
+    "        assert (T >= 1)\n",
+    "        Q = np.ndarray([env.nS, env.nA])\n",
+    "        print(Q.shape)\n",
+    "        for s in range(env.nS):\n",
+    "            #Q(x, a) { \\sum_{x in X} P_{x->x_prime | a} * (1/T R_{x->x_prime | a} + (T-1) / T * V(x_prime) }\n",
+    "            for a in range(env.nA):\n",
+    "                trans = env.P[s][a][0] #确定性的，s a唯一决定 s_prime, prob = 1.0\n",
+    "                s_prime = trans[1]\n",
+    "                R = trans[2]\n",
+    "                prob = trans[0]\n",
+    "                assert prob == 1.0\n",
+    "                if reward_type == \"gamma_discount\":\n",
+    "                    Q_x_a = R + gamma * V[s_prime]\n",
+    "                elif reward_type == \"T\":\n",
+    "                    Q_x_a = ( 1.0 / T ) * R + (T-1.0) / T * V[s_prime]\n",
+    "                else:\n",
+    "                    raise ValueError('不支持的策略评估函数')\n",
+    "                Q[s, a] = Q_x_a\n",
+    "            \n",
+    "        print(\"Q = \", V)\n",
     "\n",
+    "        return Q\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "                \n",
+    "                \n",
+    "        \n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    T = 1\n",
+    "    #nS 为 状态的个数 在这里是格子的个数\n",
     "    V = np.zeros(env.nS)\n",
+    "    while True:\n",
+    "        \n",
+    "        Q = value_DP_iteration(V, env, T,reward_type = \"gamma_discount\", gamma = 1.0)\n",
+    "        V_prime = np.max(Q, axis = 1)\n",
+    "        V_diff = np.abs(V_prime - V)\n",
+    "        diff_max = np.max(V_diff)\n",
+    "        if diff_max <= theta:\n",
+    "            break\n",
+    "            \n",
+    "        V = V_prime\n",
+    "        T += 1\n",
+    "\n",
+    "    \n",
+    "    # policy，由于是确定性的策略，似乎没必要是个矩阵？\n",
     "    policy = np.zeros([env.nS, env.nA])\n",
+    "    Q = value_DP_iteration(V, env, T,reward_type = \"gamma_discount\", gamma = 1.0 )\n",
+    "    \n",
+    "    best_action = np.argmax(Q, axis = 1)\n",
+    "\n",
+    "    \n",
+    "    for s in range(env.nS):\n",
+    "        policy[s, best_action[s]] = 1.0\n",
+    "        \n",
     "    \n",
     "    # Implement!\n",
     "    return policy, V"
@@ -62,45 +116,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "----- T = 1 ------\n",
+      "(16, 4)\n",
+      "Q =  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "----- T = 2 ------\n",
+      "(16, 4)\n",
+      "Q =  [ 0. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.  0.]\n",
+      "----- T = 3 ------\n",
+      "(16, 4)\n",
+      "Q =  [ 0. -1. -2. -2. -1. -2. -2. -2. -2. -2. -2. -1. -2. -2. -1.  0.]\n",
+      "----- T = 4 ------\n",
+      "(16, 4)\n",
+      "Q =  [ 0. -1. -2. -3. -1. -2. -3. -2. -2. -3. -2. -1. -3. -2. -1.  0.]\n",
+      "----- T = 4 ------\n",
+      "(16, 4)\n",
+      "Q =  [ 0. -1. -2. -3. -1. -2. -3. -2. -2. -3. -2. -1. -3. -2. -1.  0.]\n",
       "Policy Probability Distribution:\n",
-      "[[ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]]\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [1. 0. 0. 0.]]\n",
       "\n",
       "Reshaped Grid Policy (0=up, 1=right, 2=down, 3=left):\n",
-      "[[0 0 0 0]\n",
-      " [0 0 0 0]\n",
-      " [0 0 0 0]\n",
-      " [0 0 0 0]]\n",
+      "[[0 3 3 2]\n",
+      " [0 0 0 2]\n",
+      " [0 0 1 2]\n",
+      " [0 1 1 0]]\n",
       "\n",
       "Value Function:\n",
-      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      "[ 0. -1. -2. -3. -1. -2. -3. -2. -2. -3. -2. -1. -3. -2. -1.  0.]\n",
       "\n",
       "Reshaped Grid Value Function:\n",
-      "[[ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]]\n",
+      "[[ 0. -1. -2. -3.]\n",
+      " [-1. -2. -3. -2.]\n",
+      " [-2. -3. -2. -1.]\n",
+      " [-3. -2. -1.  0.]]\n",
       "\n"
      ]
     }
@@ -127,23 +196,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "\nArrays are not almost equal to 2 decimals\n\n(mismatch 87.5%)\n x: array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n        0.,  0.,  0.])\n y: array([ 0, -1, -2, -3, -1, -2, -3, -2, -2, -3, -2, -1, -3, -2, -1,  0])",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-55581f8eb5c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test the value function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mexpected_v\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtesting\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massert_array_almost_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpected_v\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecimal\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/dennybritz/venvs/tf/lib/python3.5/site-packages/numpy/testing/utils.py\u001b[0m in \u001b[0;36massert_array_almost_equal\u001b[0;34m(x, y, decimal, err_msg, verbose)\u001b[0m\n\u001b[1;32m    914\u001b[0m     assert_array_compare(compare, x, y, err_msg=err_msg, verbose=verbose,\n\u001b[1;32m    915\u001b[0m              \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Arrays are not almost equal to %d decimals'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mdecimal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 916\u001b[0;31m              precision=decimal)\n\u001b[0m\u001b[1;32m    917\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    918\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/dennybritz/venvs/tf/lib/python3.5/site-packages/numpy/testing/utils.py\u001b[0m in \u001b[0;36massert_array_compare\u001b[0;34m(comparison, x, y, err_msg, verbose, header, precision)\u001b[0m\n\u001b[1;32m    735\u001b[0m                                 names=('x', 'y'), precision=precision)\n\u001b[1;32m    736\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcond\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 737\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    738\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    739\u001b[0m         \u001b[0;32mimport\u001b[0m \u001b[0mtraceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: \nArrays are not almost equal to 2 decimals\n\n(mismatch 87.5%)\n x: array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n        0.,  0.,  0.])\n y: array([ 0, -1, -2, -3, -1, -2, -3, -2, -2, -3, -2, -1, -3, -2, -1,  0])"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test the value function\n",
     "expected_v = np.array([ 0, -1, -2, -3, -1, -2, -3, -2, -2, -3, -2, -1, -3, -2, -1,  0])\n",
@@ -167,9 +222,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
