--- a/TD/Windy Gridworld Playground.ipynb
+++ b/TD/Windy Gridworld Playground.ipynb
@@ -61,7 +61,6 @@
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "\n",
-      "(33, -1.0, False, {'prob': 1.0})\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
@@ -106,7 +105,7 @@
     "print(env.step(1))\n",
     "env.render()\n",
     "\n",
-    "print(env.step(2))\n",
+    "# print(env.step(2))\n",
     "env.render()\n",
     "\n",
     "print(env.step(1))\n",
@@ -118,10 +117,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, -1.0, False, {'prob': 1.0})\n",
+      "o  o  o  o  o  o  x  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  T  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "\n",
+      "(7, -1.0, False, {'prob': 1.0})\n",
+      "o  o  o  o  o  o  o  x  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  T  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "\n",
+      "(8, -1.0, False, {'prob': 1.0})\n",
+      "o  o  o  o  o  o  o  o  x  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  T  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "\n",
+      "o  o  o  o  o  o  o  o  x  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  T  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "\n",
+      "(9, -1.0, False, {'prob': 1.0})\n",
+      "o  o  o  o  o  o  o  o  o  x\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  T  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "print(env.step(1))\n",
+    "env.render()\n",
+    "\n",
+    "print(env.step(1))\n",
+    "env.render()\n",
+    "\n",
+    "print(env.step(1))\n",
+    "env.render()\n",
+    "\n",
+    "# print(env.step(2))\n",
+    "env.render()\n",
+    "\n",
+    "print(env.step(1))\n",
+    "env.render()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(19, -1.0, False, {'prob': 1.0})\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  x\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  T  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "\n",
+      "(29, -1.0, False, {'prob': 1.0})\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  x\n",
+      "o  o  o  o  o  o  o  T  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "\n",
+      "(39, -1.0, False, {'prob': 1.0})\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  T  o  x\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "\n",
+      "(49, -1.0, False, {'prob': 1.0})\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  T  o  o\n",
+      "o  o  o  o  o  o  o  o  o  x\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(env.step(2))\n",
+    "env.render()\n",
+    "\n",
+    "print(env.step(2))\n",
+    "env.render()\n",
+    "print(env.step(2))\n",
+    "env.render()\n",
+    "print(env.step(2))\n",
+    "env.render()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(48, -1.0, False, {'prob': 1.0})\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  T  o  o\n",
+      "o  o  o  o  o  o  o  o  x  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "\n",
+      "(37, -1.0, True, {'prob': 1.0})\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  x  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(env.step(3))\n",
+    "env.render()\n",
+    "\n",
+    "print(env.step(3))\n",
+    "env.render()"
+   ]
   }
  ],
  "metadata": {
@@ -140,9 +306,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
