--- a/DQN/Deep Q Learning.ipynb
+++ b/DQN/Deep Q Learning.ipynb
@@ -2,11 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-4ec02bf4ce89>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;34m\"../\"\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -49,7 +59,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -60,11 +70,11 @@
     "    def __init__(self):\n",
     "        # Build the Tensorflow graph\n",
     "        with tf.variable_scope(\"state_processor\"):\n",
-    "            self.input_state = tf.placeholder(shape=[210, 160, 3], dtype=tf.uint8)\n",
-    "            self.output = tf.image.rgb_to_grayscale(self.input_state)\n",
-    "            self.output = tf.image.crop_to_bounding_box(self.output, 34, 0, 160, 160)\n",
+    "            self.input_state = tf.placeholder(shape=[210, 160, 3], dtype=tf.uint8)#原始图像大小\n",
+    "            self.output = tf.image.rgb_to_grayscale(self.input_state) #三通道变一通道\n",
+    "            self.output = tf.image.crop_to_bounding_box(self.output, 34, 0, 160, 160) #网络的输入大小\n",
     "            self.output = tf.image.resize_images(\n",
-    "                self.output, [84, 84], method=tf.image.ResizeMethod.NEAREST_NEIGHBOR)\n",
+    "                self.output, [84, 84], method=tf.image.ResizeMethod.NEAREST_NEIGHBOR) #网络的实际输入大小，要进行缩放\n",
     "            self.output = tf.squeeze(self.output)\n",
     "\n",
     "    def process(self, sess, state):\n",
@@ -111,6 +121,7 @@
     "\n",
     "        # Placeholders for our input\n",
     "        # Our input are 4 grayscale frames of shape 84, 84 each\n",
+    "        # timestep t时刻的输入是t-3 t-2 t-1 t时刻的灰度图的stack，所以是 4 x 84 x 84\n",
     "        self.X_pl = tf.placeholder(shape=[None, 84, 84, 4], dtype=tf.uint8, name=\"X\")\n",
     "        # The TD target value\n",
     "        self.y_pl = tf.placeholder(shape=[None], dtype=tf.float32, name=\"y\")\n",
@@ -131,7 +142,7 @@
     "        # Fully connected layers\n",
     "        flattened = tf.contrib.layers.flatten(conv3)\n",
     "        fc1 = tf.contrib.layers.fully_connected(flattened, 512)\n",
-    "        self.predictions = tf.contrib.layers.fully_connected(fc1, len(VALID_ACTIONS))\n",
+    "        self.predictions = tf.contrib.layers.fully_connected(fc1, len(VALID_ACTIONS)) #输出层\n",
     "\n",
     "        # Get the predictions for the chosen actions only\n",
     "        gather_indices = tf.range(batch_size) * tf.shape(self.predictions)[1] + self.actions_pl\n",
@@ -254,9 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_epsilon_greedy_policy(estimator, nA):\n",
@@ -296,7 +305,7 @@
     "                    experiment_dir,\n",
     "                    replay_memory_size=500000,\n",
     "                    replay_memory_init_size=50000,\n",
-    "                    update_target_estimator_every=10000,\n",
+    "                    update_target_estimator_every=10000, #这么大？\n",
     "                    discount_factor=0.99,\n",
     "                    epsilon_start=1.0,\n",
     "                    epsilon_end=0.1,\n",
@@ -375,9 +384,23 @@
     "    state = env.reset()\n",
     "    state = state_processor.process(sess, state)\n",
     "    state = np.stack([state] * 4, axis=2)\n",
+    "    print(\"state.shape = \", state.shape) #应该是 4 x 84 x 84 x 1\n",
     "    for i in range(replay_memory_init_size):\n",
     "        # TODO: Populate replay memory!\n",
-    "        pass\n",
+    "        probs = policy(sess, state, epsilons[min(total_t, epsilon_decay_steps-1)])\n",
+    "        action = np.random.choice(np.arange(len(probs)), p=sprobs)\n",
+    "        next_state, reward, done, _ = env.step(VALID_ACTIONS[action])\n",
+    "        next_state = state_processor.process(sess, next_state)\n",
+    "        next_state = np.append(state[:,:,1:], np.expand_dims(next_state, 2), axis=2)\n",
+    "        replay_memory.append(Transition(state, action, reward, next_state, done))\n",
+    "        if done: #这个真的需要吗，走一步就死？\n",
+    "            print(\"走一步就死 action = \", action)\n",
+    "            state = env.reset()\n",
+    "            state = state_processor.process(sess, state)\n",
+    "            state = np.stack([state] * 4, axis=2)\n",
+    "        else:\n",
+    "            state = next_state\n",
+    "\n",
     "\n",
     "    # Record videos\n",
     "    env= Monitor(env,\n",
@@ -409,7 +432,8 @@
     "\n",
     "            # TODO: Maybe update the target estimator\n",
     "            if total_t % update_target_estimator_every == 0:\n",
-    "                pass\n",
+    "                copy_model_parameters(q_estimator, target_estimator)\n",
+    "#                 pass\n",
     "\n",
     "            # Print out which step we're on, useful for debugging.\n",
     "            print(\"\\rStep {} ({}) @ Episode {}/{}, loss: {}\".format(\n",
@@ -418,20 +442,68 @@
     "\n",
     "            # Take a step in the environment\n",
     "            # TODO: Implement!\n",
+    "            next_action_probs = policy(sess, state, epsilon)\n",
+    "            next_action = np.random.choice(np.arange(len(next_action_probs)), p=next_action_probs)\n",
+    "            #这时候不需要算 y（也就是td_target），因为target_network一直在变\n",
+    "            #在sample到这个transition，要进行训练的时候再计算y\n",
+    "            # y_t = ?\n",
+    "            next_frame, reward, done = env.step(next_action)\n",
+    "            next_frame = state_processor.process(sess, next_frame)\n",
+    "#             state = np.delete(state, (0), axis = 0) #delete 最早一帧的图像\n",
+    "#             state = np.vstack((state, next_frame))\n",
+    "            next_state = np.append(state[:,:,1:], np.expand_dims(next_frame, 2), axis=2)\n",
+    "            assert next_state.shape == (4,84,84,1)\n",
+    "            \n",
+    "            transition = Transition(state = state, action = next_action, reward = reward, next_state = next_state, done = done)\n",
     "\n",
     "            # If our replay memory is full, pop the first element\n",
     "            if len(replay_memory) == replay_memory_size:\n",
     "                replay_memory.pop(0)\n",
     "\n",
     "            # TODO: Save transition to replay memory\n",
+    "            replay_memory.append(transition)\n",
     "\n",
     "            # Update statistics\n",
     "            stats.episode_rewards[i_episode] += reward\n",
     "            stats.episode_lengths[i_episode] = t\n",
     "\n",
     "            # TODO: Sample a minibatch from the replay memory\n",
+    "            # 该函数的用法见 https://numpy.org/doc/stable/reference/random/generated/numpy.random.choice.html\n",
+    "            sampled_transitions = np.random.choice(replay_memory, size = batch_size, replace = False )\n",
+    "            \n",
+    "            assert len(sampled_transitions) == batch_size\n",
+    "            \n",
     "            # TODO: Calculate q values and targets\n",
+    "            # 计算td_target 即 Y\n",
+    "            Y = []\n",
+    "            X = []\n",
+    "            A = []\n",
+    "            for T in sampled_transitions:\n",
+    "                next_s = np.reshape(T.next_state, (1, *T.next_state.shape))\n",
+    "                assert next_s.shape == (1, 4, 84, 84, 1)\n",
+    "                Q = target_estimator.predict(\n",
+    "                    sess, \n",
+    "                    next_s\n",
+    "                )\n",
+    "                assert Q.shape == (1, 4)\n",
+    "                max_Q = np.max(Q[0]);\n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "                y = T.reward + discount_factor * max_Q\n",
+    "                Y.append(y)\n",
+    "            \n",
+    "                X.append(T.state)\n",
+    "                \n",
+    "                A.append(T.action)\n",
+    "            \n",
+    "            Y = np.array(Y)\n",
+    "            X = np.array(X) #state\n",
+    "            A = np.array(A) \n",
     "            # TODO Perform gradient descent update\n",
+    "            \n",
+    "            q_estimator.update(sess, X, A, Y)\n",
+    "            \n",
     "\n",
     "            if done:\n",
     "                break\n",
@@ -514,9 +586,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
-  }
+   "version": "3.6.13"
+  },
+  "toc-autonumbering": true,
+  "toc-showcode": true,
+  "toc-showmarkdowntxt": true
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
